vocab catalog endpoint refactor
