# apps/api/src/dto/api/vocabcatalog/post.ts
@@ -3,5 +3,6 @@ import { VocabCatalogDto } from "../../entities/vocab-catalog.dto";
 
 export class PostVocabCatalogRequestDto extends OmitType(VocabCatalogDto, [
 	"id",
+	"created_at",
 ] as const) {}
 export class PostVocabCatalogResponseDto extends VocabCatalogDto {}
